--- a/vue-3-in-action/can-you-drive/index.html
+++ b/vue-3-in-action/can-you-drive/index.html
@@ -1,10 +1,53 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Can you drive?</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vue 3.4 Template</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/normalize.css/normalize.css"
+    />
+    <style type="text/css">
+      body {
+        font-family: monospace;
+        padding: 20px;
+        font-size: 2em;
+      }
+    </style>
+    <script src="https://unpkg.com/vue@3.4.0"></script>
+  </head>
+
+  <body>
+    <div id="app">
+      <div>{{message}}</div>
+      <div>Can you drive?: {{ canDrive }}</div>
+    </div>
+    <script>
+      const { createApp, ref, computed } = Vue;
+      const App = {
+        setup() {
+          let message = ref("PDX Sliders");
+          let age = ref(null);
+          let canDrive = computed(() => {
+            console.log("@@ computed ran");
+            return age.value >= 18 ? "Y" : "N";
+          });
+
+          setTimeout(() => {
+            console.log("@@ 5 secs");
+            message.value = "Quiznos";
+            age.value = 47;
+            console.log(message.value);
+          }, 5000);
+          return {
+            message,
+            canDrive,
+          };
+        },
+      };
+
+      createApp(App).mount("#app");
+    </script>
+  </body>
 </html>
