Update html page

--- a/vue-3-in-action/can-you-drive/index.html
+++ b/vue-3-in-action/can-you-drive/index.html
@@ -38,7 +38,7 @@
             console.log("@@ 5 secs");
             message.value = "Quiznos";
             age.value = 47;
-            console.log(message.value);
+            console.log(message.value, age.value);
           }, 5000);
           return {
             message,
