--- a/vue-3-in-action/can-you-drive/index.html
+++ b/vue-3-in-action/can-you-drive/index.html
@@ -14,6 +14,12 @@
         padding: 20px;
         font-size: 2em;
       }
+      .can {
+        color: green;
+      }
+      .cant {
+        color: red;
+      }
     </style>
     <script src="https://unpkg.com/vue@3.4.0"></script>
   </head>
@@ -21,7 +27,12 @@
   <body>
     <div id="app">
       <div>{{message}}</div>
-      <div>Can you drive?: {{ canDrive }}</div>
+      <div>
+        Can you drive?:
+        <span :class="{ can: canDrive === 'Y', cant: canDrive === 'N' }"
+          >{{ canDrive }}</span
+        >
+      </div>
     </div>
     <script>
       const { createApp, ref, computed } = Vue;
