Update html page

--- a/vue-3-in-action/can-you-drive/index.html
+++ b/vue-3-in-action/can-you-drive/index.html
@@ -26,6 +26,10 @@
 
   <body>
     <div id="app">
+      <div>
+        <label>Enter your age:</label>
+        <input v-model="age" />
+      </div>
       <div>{{message}}</div>
       <div>
         Can you drive?:
@@ -54,6 +58,7 @@
           return {
             message,
             canDrive,
+            age,
           };
         },
       };
