Update html page

--- a/vue-3-in-action/quiz-game/index.html
+++ b/vue-3-in-action/quiz-game/index.html
@@ -54,13 +54,14 @@
             return questions.length === current.value;
           });
           const check = () => {
+            console.log("Checked");
             if (true === true) {
             }
             if (true === true) {
             }
           };
 
-          const interval = setInterval(check, 5000);
+          const interval = setInterval(check, 4000);
           return {
             question,
             answer,
