--- a/vue-3-in-action/image-gallery/index.html
+++ b/vue-3-in-action/image-gallery/index.html
@@ -73,10 +73,21 @@
 
       <div class="gallery" v-else>
         <!-- List Rendering and Conditional Class Binding -->
-        <div class="photo" v-for="photo in photos" :key="photo.id">
+        <div
+          class="photo"
+          v-for="(photo, index) in photos"
+          :key="photo.id"
+          @click="removePhoto(index)"
+        >
           <!-- An image goes here -->
           <img :src="photo.url" />
-          <button class="favorite-button">★</button>
+          <button
+            class="favorite-button"
+            @click="toggleFavorite(photo)"
+            :class="{ 'active': photo.isFavorite }"
+          >
+            ★
+          </button>
         </div>
       </div>
     </div>
@@ -120,11 +131,17 @@
               newPhotoUrl.value = "";
             }
           };
-          const toggleFavorite = () => {
+          const toggleFavorite = (photo) => {
             // Favorite toggling logic
+            console.log(photo);
+            photo.isFavorite = !photo.isFavorite;
+            console.log(photo);
+          };
+          const removePhoto = (index) => {
+            photos.value.splice(index, 1);
           };
 
-          return { addPhoto, photos, newPhotoUrl };
+          return { addPhoto, photos, newPhotoUrl, toggleFavorite, removePhoto };
         },
       };
       createApp(App).mount("#app");
