Update html page

--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -101,6 +101,9 @@
           onMounted(() => {
             console.log("mounted");
           });
+          beforeMount(() => {
+            console.log("before mount");
+          });
           return {};
         },
       };
