--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -59,7 +59,7 @@
     <div id="app">
       <form>
         <!-- Adding tasks form -->
-        <input placeholder="Add new task" />
+        <input ref="newTaskInput" placeholder="Add new task" />
         <select>
           <option disabled value="">Select priority</option>
           <option>High</option>
@@ -94,17 +94,18 @@
     </div>
 
     <script>
-      const { createApp, onMounted } = Vue;
+      const { createApp, onMounted, onBeforeMount, ref } = Vue;
 
       const App = {
         setup() {
+          const newTaskInput = ref(null);
           onMounted(() => {
-            console.log("mounted");
+            newTaskInput.value.focus();
           });
-          beforeMount(() => {
+          onBeforeMount(() => {
             console.log("before mount");
           });
-          return {};
+          return { newTaskInput };
         },
       };
 
