Update html page

--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -111,6 +111,7 @@
             },
           ]);
           const newTaskInput = ref(null);
+          const newTask = ref("");
           onMounted(() => {
             newTaskInput.value.focus();
           });
