--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,6 +25,10 @@
         margin-bottom: 10px;
         border-radius: 5px;
         border-left: 5px solid;
+      }
+
+      input {
+        margin-right: 0.75em;
       }
 
       .high {
@@ -81,7 +85,7 @@
         <p>No tasks found. Try changing the filter or add some tasks!</p>
       </div>
 
-      <div>
+      <div v-else>
         <h3>Your Tasks</h3>
         <!-- This is a list of tasks -->
         <div
@@ -102,7 +106,7 @@
     </div>
 
     <script>
-      const { createApp, onMounted, onBeforeMount, ref } = Vue;
+      const { createApp, onMounted, onBeforeMount, ref, watch } = Vue;
 
       const App = {
         setup() {
@@ -110,7 +114,7 @@
             {
               id: 1,
               description: "Buy groceries",
-              priority: "High",
+              priority: "Low",
               done: true,
             },
           ]);
@@ -132,6 +136,19 @@
               newPriority.value = "";
             }
           };
+
+          // watch(newTask, (newValue, oldValue) => {
+          //   console.log(`New value is ${newValue}, old was ${oldValue}`);
+          // });
+
+          watch(
+            tasks,
+            () => {
+              console.log("Tasks has changed");
+            },
+            { deep: true },
+          );
+
           return { newTaskInput, tasks, addTask, newTask, newPriority };
         },
       };
