--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -110,14 +110,7 @@
 
       const App = {
         setup() {
-          const tasks = ref([
-            {
-              id: 1,
-              description: "Buy groceries",
-              priority: "Low",
-              done: true,
-            },
-          ]);
+          const tasks = ref(JSON.parse(localStorage.getItem("tasks") ?? "[]"));
           const newTaskInput = ref(null);
           const newTask = ref("");
           const newPriority = ref("");
@@ -144,7 +137,7 @@
           watch(
             tasks,
             () => {
-              console.log("Tasks has changed");
+              localStorage.setItem("tasks", JSON.stringify(tasks.value));
             },
             { deep: true },
           );
