--- a/vue-3-in-action/task-list/index.html
+++ b/vue-3-in-action/task-list/index.html
@@ -78,7 +78,7 @@
       </form>
 
       <!-- Task filtering -->
-      <input placeholder="Filter tasks..." />
+      <input placeholder="Filter tasks..." v-model="filterText" />
 
       <!-- If there no tasks -->
       <div v-if="tasks.length === 0">
@@ -89,7 +89,7 @@
         <h3>Your Tasks</h3>
         <!-- This is a list of tasks -->
         <div
-          v-for="task in tasks"
+          v-for="(task, index) in filteredTasks"
           :key="task.id"
           :class="{'task': true, completed: task.done, [task.priority.toLowerCase()]: true}"
         >
@@ -100,20 +100,28 @@
             <span>{{ task.description }}</span>
           </div>
           <!-- Removing a task -->
-          <button class="remove-button">✖</button>
+          <button class="remove-button" @click="removeTask(index)">✖</button>
         </div>
       </div>
     </div>
 
     <script>
-      const { createApp, onMounted, onBeforeMount, ref, watch } = Vue;
+      const { createApp, onMounted, onBeforeMount, ref, watch, computed } = Vue;
 
       const App = {
         setup() {
           const tasks = ref(JSON.parse(localStorage.getItem("tasks") ?? "[]"));
+          const filteredTasks = computed(() =>
+            tasks.value.filter((task) =>
+              task.description
+                .toLowerCase()
+                .includes(filterText.value.toLowerCase()),
+            ),
+          );
           const newTaskInput = ref(null);
           const newTask = ref("");
           const newPriority = ref("");
+          const filterText = ref("");
           onMounted(() => {
             newTaskInput.value.focus();
           });
@@ -129,6 +137,9 @@
               newPriority.value = "";
             }
           };
+          const removeTask = (index) => {
+            tasks.value.splice(index, 1);
+          };
 
           // watch(newTask, (newValue, oldValue) => {
           //   console.log(`New value is ${newValue}, old was ${oldValue}`);
@@ -142,7 +153,16 @@
             { deep: true },
           );
 
-          return { newTaskInput, tasks, addTask, newTask, newPriority };
+          return {
+            newTaskInput,
+            tasks,
+            addTask,
+            newTask,
+            newPriority,
+            removeTask,
+            filterText,
+            filteredTasks,
+          };
         },
       };
 
